name:                bad-specver-package
version:             0
synopsis:            Synopsis
description:         Description
license:             BSD3
license-file:        LICENSE
author:              Hackage Server Team
maintainer:          no@email.com
category:            Test case
build-type:          Simple
cabal-version:       >=1.26

executable bad-specver-package
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
