name:                missing-configure
version:             0.1.0.0
synopsis:            Synopsis
description:         Description
license:             BSD3
license-file:        LICENSE
author:              Hackage Server Team
maintainer:          no@email.com
category:            Test case
build-type:          Configure
cabal-version:       >=1.10

executable missing-configure
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
  default-language:    Haskell2010
